2007-08-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/action.c:
	
	Added a list of unimplemented actions.

2007-08-07  Marius Andreiana <marius.andreiana@gmail.com>

	* src/action.c: (do_action), (voice_control_action_process_result):
	* src/voice-control.c:
	
	New actions implemented: clicks and main menu invocation.

2007-08-04  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* lang/desktop-control.dict:
	* lang/desktop-control.fsg:
	
	Updated dictionary, thanks to David Huggins-Daines for the notice.
	
	* src/action.c: (do_action),
	(voice_control_action_append_commands),
	(voice_control_action_process_result):
	* src/action.h:
	* src/gstsphinxsink.c: (gst_sphinx_decoder_init),
	(gst_sphinx_sink_class_init), (gst_sphinx_sink_render),
	(gst_sphinx_sink_set_fsg):
	* src/gstsphinxsink.h:
	* src/voice-control.c: (control_start),
	(on_sink_after_initialization), (on_sink_message),
	(voice_control_ui_changed), (voice_control_applet_create_pipeline):
	
	Reworked action handling.

2007-08-02  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* src/action.c:
	* src/action.h:
	* src/gstsphinxsink.c:
	* src/gstsphinxsink.h:
	* src/spi-listener.c:
	* src/spi-listener.h:
	* src/voice-control.c:
	
	Updated license information. Thanks to Saša Bodiroža <jazzva@gmail.com>

2007-07-21  David Huggins-Daines <dhuggins@cs.cmu.edu>

	* README:
	* configure.ac:
	* src/voice-control.c: (on_sink_listening), (process_action),
	(show_notification), (on_sink_message),
	(voice_control_applet_init), (main):
	
	libnotify support to show recognized text.

2007-07-21  David Huggins-Daines <dhuggins@cs.cmu.edu>

	* README:
	* configure.ac:
	* src/Makefile.am:
	* src/gstsphinxsink.c:
	* src/gstsphinxsink.h:
	
	Ported to pocketsphinx.

2007-07-08  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* README:
	
	Updated the list of requirements. Thanks to 
	Marius Andreiana <mandreiana.lists@gmail.com>

2007-06-27  Raphael Nunes da Motta <raphael.nunes.enc04@gmail.com>

	* lang/desktop-control.fsg: